tags/NHI1-0.7/theLink/libmsgque/msgque.h

struct MqErrorS;
struct MqBufferLS;
struct MqBufferS;
union  MqBufferU;
struct MqS;
struct MqConfigS;
typedef signed char MQ_BYT;
typedef unsigned char MQ_BOL;
typedef short MQ_SRT;
typedef int MQ_INT;
typedef float MQ_FLT;
typedef __int64 MQ_WID;
typedef long long int MQ_WID;
typedef double MQ_DBL;
typedef int MQ_SIZE;
typedef unsigned char MQ_BINB;
typedef MQ_PTRB *MQ_PTR;
typedef MQ_STRB const * MQ_CST;
typedef MQ_BINB *MQ_BIN;
#define MQ_YES 1
enum MqErrorE {
  MQ_OK		= 0,		
  MQ_CONTINUE	= 1,            
  MQ_ERROR	= 2,            
};
struct MqLinkS {
  struct MqSendS    * send;	    
  struct MqReadS    * read;	    
  struct MqIoS	    * io;	    
  struct MqBufferLS * alfa;	    
  MQ_SIZE   ctxId;		    
  struct MqS *ctxIdP;		    
  struct pTokenS * srvT;	    
  MQ_CST targetIdent;		    
  struct MqCacheS * readCache;	    
  struct {
    MQ_BOL endian	      : 1 ; 
    MQ_BOL onCreateStart      : 1 ; 
    MQ_BOL onCreateEnd	      : 1 ; 
    MQ_BOL onDelete	      :	1 ; 
    MQ_BOL onShutdown	      :	1 ; 
    MQ_BOL prepareDone	      :	1 ; 
    MQ_BOL doFactoryCleanup   :	1 ; 
    MQ_BOL flagServerSetup    :	1 ; 
    MQ_BOL isWORKER	      :	1 ; 
    MQ_BOL isConnected	      : 1 ; 
  } bits;
  MQ_SIZE   ctxIdR;		    
  MQ_SIZE   ctxIdZ;		    
  struct MqS ** ctxIdA;		    
  struct MqTransS * trans;	    
  MQ_HDL _trans;		    
  struct pChildS * childs;	    
  struct pChildS * self;	    
  struct MqLinkSlaveS * slave;	    
};
struct MqErrorS {
  enum MqErrorE code;		
  struct MqBufferS * text;      
  MQ_INT num;	                
  MQ_BOL append;		
  struct MqS * errctx;		
};
struct MqConfigS {
  MQ_BOL isSilent;
  MQ_BOL isString;
  enum MqStartE startAs;
  MQ_STR name;
  MQ_STR srvname;
  MQ_INT debug;
  struct MqS * parent;
  struct MqS * master;
  MQ_SIZE master_id;
  MQ_BOL ignoreThread;
  MQ_BOL ignoreSpawn;
  MQ_BOL ignoreFork;
  struct MqIoConfigS io;
};
struct MqSetupS {
  MQ_STR ident;
  struct MqLinkSetupS Child;
  struct MqLinkSetupS Parent;
  struct MqCallbackS BgError;
  MQ_BOL isServer;
  struct MqCallbackS ServerSetup;
  struct MqCallbackS ServerCleanup;
  struct MqCallbackS Event;
  struct MqFactoryS Factory;
  MqSetupF fThreadInit;
  MqSetupF fForkInit;
  MqExitF fProcessExit;
  MqExitF fThreadExit;
  MqHelpF fHelp;
  MQ_BOL ignoreExit;
};
enum MqStatusIsE {
  MQ_STATUS_IS_INITIAL = 0,	    
  MQ_STATUS_IS_DUP     = 1<<0,	    
  MQ_STATUS_IS_THREAD  = 1<<1,	    
  MQ_STATUS_IS_FORK    = 1<<2,	    
  MQ_STATUS_IS_SPAWN   = 1<<3,	    
};
struct MqS {
  MQ_INT signature;		    
  MQ_PRIVATE_CONFIG_CONST
    struct MqConfigS config;	    
  struct MqSetupS setup;	    
  struct MqErrorS error;	    
  struct MqLinkS link;		    
  struct MqBufferS * temp;	    
  enum MqStatusIsE statusIs;	    
  struct {
    MQ_BOL MqContextDelete_LOCK :1; 
    MQ_BOL MqContextFree_LOCK	:1; 
    MQ_BOL EventProc_LOCK	:1; 
    MQ_BOL onExit	        :1; 
  } bits;			    
  MQ_PTR threadData;		    
  MQ_PTR self;			    
  MQ_SIZE contextsize;		    
  MQ_INT refCount;		    
  struct MqGcS *gc;		    
  MQ_SIZE gcid;			    
};
enum MqTypeE {
  MQ_BYTT = (1<<4 | MQ_TYPE_IS_1_BYTE),  
  MQ_BOLT = (2<<4 | MQ_TYPE_IS_1_BYTE),  
  MQ_SRTT = (3<<4 | MQ_TYPE_IS_2_BYTE),  
  MQ_INTT = (4<<4 | MQ_TYPE_IS_4_BYTE),  
  MQ_FLTT = (5<<4 | MQ_TYPE_IS_4_BYTE),  
  MQ_WIDT = (6<<4 | MQ_TYPE_IS_8_BYTE),  
  MQ_DBLT = (7<<4 | MQ_TYPE_IS_8_BYTE),  
  MQ_BINT = (8<<4                    ),  
  MQ_STRT = (9<<4                    ),  
  MQ_LSTT = (10<<4                   ),  
  MQ_TRAT = (11<<4                   )   
};
union MqBufferU {
  MQ_ATO *A;			
  MQ_BIN  B;			
  MQ_STR  C;			
  MQ_LST  L;			
  MQ_LST  R;			
  MQ_LST  T;			
};
enum MqAllocE {
  MQ_ALLOC_STATIC     = 0,	
  MQ_ALLOC_DYNAMIC    = 1,	
};
struct MqBufferS {
  MQ_INT signature;		
  struct MqS *context;		
  MQ_BIN data;                  
  MQ_SIZE size;                 
  MQ_SIZE cursize;              
  MQ_SIZE numItems;             
  union MqBufferU cur;		
  enum MqAllocE alloc;		
  enum MqTypeE type;            
  MQ_BINB bls[MQ_BLS_SIZE+1];
};
MQ_EXTERN enum MqErrorE MQ_DECL MqBufferGetY (
  struct MqBufferS * const buf,
  MQ_BYT * const valP
);
MQ_EXTERN enum MqErrorE MQ_DECL MqBufferGetO (
  struct MqBufferS * const buf,
  MQ_BOL * const valP
);
MQ_EXTERN enum MqErrorE MQ_DECL MqBufferGetS (
  struct MqBufferS * const buf,
  MQ_SRT * const valP
);
MQ_EXTERN enum MqErrorE MQ_DECL MqBufferGetI (
  struct MqBufferS * const buf,
  MQ_INT * const valP
);
MQ_EXTERN enum MqErrorE MQ_DECL MqBufferGetF (
  struct MqBufferS * const buf,
  MQ_FLT * const valP
);
MQ_EXTERN enum MqErrorE MQ_DECL MqBufferGetW (
  struct MqBufferS * const buf,
  MQ_WID * const valP
);
MQ_EXTERN enum MqErrorE MQ_DECL MqBufferGetD (
  struct MqBufferS * const buf,
  MQ_DBL * const valP
);
MQ_EXTERN enum MqErrorE MQ_DECL MqBufferGetB (
  struct MqBufferS * const buf,
  MQ_BIN  * const out,
  MQ_SIZE * const size
);
MQ_EXTERN enum MqErrorE MQ_DECL MqBufferGetC (
  struct MqBufferS * const buf,
  MQ_CST * const out
);
MQ_EXTERN char MQ_DECL MqBufferGetType (
  struct MqBufferS * const buf
);
MQ_EXTERN struct MqS * MQ_DECL MqBufferGetContext (
  struct MqBufferS * const buf
);
struct MqBufferLS {
  MQ_SIZE size;                 
  MQ_SIZE cursize;              
  struct MqBufferS ** data;	
  struct MqBufferS ** cur;	
} ;
MQ_EXTERN struct MqBufferLS * MQ_DECL MqBufferLCreate (
  MQ_SIZE const size
);
MQ_EXTERN void MQ_DECL
MqBufferLAppendC (
  struct MqBufferLS * const bufL,
  MQ_CST const val
);
MQ_EXTERN enum MqErrorE MQ_DECL MqErrorReset (
  struct MqS * const context
);
MQ_EXTERN enum MqErrorE MQ_DECL MqErrorGetCode (
  struct MqS const * const context
);
MQ_EXTERN MQ_CST MQ_DECL MqErrorGetText (
  struct MqS const * const ctx
);
MQ_EXTERN MQ_INT MQ_DECL MqErrorGetNum (
  struct MqS const * const ctx
);